# chess-cpp

./: .clang-tidy  CMakeLists.txt  Constants.cpp  Constants.h  LocalPrintTesting.h  README.md  main.cpp  mainwindow.h  tempmain.cpp
board/: Board.cpp  Board.h  ChessBoard.cpp  ChessBoard.h  Field.cpp  Field.h  Figure.h
board/figures/: Bishop.cpp  Bishop.h  Figure.cpp  Figure.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
board/move/: ApplyMoveResult.cpp  ApplyMoveResult.h  Coordinates.cpp  Coordinates.h  LegalMoveGetter.cpp  LegalMoveGetter.h  Move.cpp  Move.h  MoveApplier.cpp  MoveApplier.h  MoveMethod.cpp  MoveMethod.h  MoveType.cpp  MoveType.h
board/move/checkers/: CastleChecker.h  CheckChecker.h  DoubleMoveChecker.cpp  DoubleMoveChecker.h  EnPassantChecker.cpp  EnPassantChecker.h
model/: Constants.h
model/board/: Field.cpp
model/board/figures/: Bishop.h  Figure.cpp  King.cpp  Knight.cpp  Knight.h  Queen.h  Rook.cpp
model/board/move/: Coordinates.h  LegalMoveGetter.cpp  MoveType.h
model/board/move/checkers/: CheckChecker.cpp  CheckChecker.h  EnPassantChecker.h
src/: Constants.h  PrintUtils.h
src/controller/: ChessController.cpp  ChessController.h  PromotionType.h
src/model/: ChessColor.h  Constants.h  Utils.cpp  Utils.h
src/model/board/: ChessBoard.cpp  ChessBoard.h
src/model/board/figures/: Bishop.h  Figure.h  King.h  Pawn.cpp  Pawn.h  Queen.cpp  Rook.h
src/model/board/move/: Coordinates.cpp  Coordinates.h  KingPositionSubscriber.h  LegalMoveGetter.cpp  LegalMoveGetter.h  Move.cpp  Move.h  VisionBoard.h
src/model/board/move/checkers/: CastleChecker.cpp  EnPassantChecker.cpp
src/model/board/subscribers/: CastleSubscriber.cpp  CastleSubscriber.h  EnPassantSubscriber.cpp  EnPassantSubscriber.h  FiftyMoveSubscriber.cpp  FiftyMoveSubscriber.h  KingPositionSubscriber.cpp  KingPositionSubscriber.h  MoveSubscriptionManager.cpp  MoveSubscriptionManager.h  PawnPositionSubscriber.cpp  PawnPositionSubscriber.h  PromotionSubscriber.cpp  PromotionSubscriber.h  PubSubManagerSingleton.cpp  PubSubManagerSingleton.h  Subscriber.h  ThreefoldSubscriber.cpp  ThreefoldSubscriber.h
src/model/board/subscribers/board_subs/: ThreefoldBoardSubscriber.cpp  ThreefoldBoardSubscriber.h
src/model/board/subscribers/move_subs/: CastleSubscriber.cpp  EnPassantSubscriber.cpp  EnPassantSubscriber.h  FiftyMoveSubscriber.cpp  FiftyMoveSubscriber.h  KingPositionSubscriber.h  MoveSubscriber.cpp  MoveSubscriptionManager.h  PawnPositionSubscriber.cpp  PawnPositionSubscriber.h  PromotionSubscriber.cpp  PromotionSubscriber.h
src/model/core/: ChessBoard.cpp  ChessBoard.h  ChessColor.h  ConstantCoordinates.h  Constants.h  Coordinates.h  Field.cpp  Field.h  Utils.cpp  Utils.h
src/model/figures/: Bishop.cpp  Bishop.h  Figure.cpp  Figure.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
src/model/move/: ApplyMoveResult.cpp  ApplyMoveResult.h  CastleMove.cpp  CastleMove.h  Coordinates.cpp  Coordinates.h  DefaultMove.cpp  DefaultMove.h  EnPassantMove.cpp  EnPassantMove.h  LegalMoveGetter.cpp  LegalMoveGetter.h  Move.cpp  Move.h  MoveApplier.cpp  MoveApplier.h  MoveType.cpp  MoveType.h  VisionBoard.cpp  VisionBoard.h  VisionUtil.cpp  VisionUtil.h
src/model/subscribers/board_subs/: ThreefoldBoardSubscriber.cpp  ThreefoldBoardSubscriber.h
src/model/subscribers/move_subs/: CastleSubscriber.cpp  CastleSubscriber.h  EnPassantSubscriber.cpp  EnPassantSubscriber.h  FiftyMoveSubscriber.cpp  FiftyMoveSubscriber.h  KingPositionSubscriber.cpp  KingPositionSubscriber.h  MoveSubscriber.h  MoveSubscriptionManager.cpp  MoveSubscriptionManager.h  PawnPositionSubscriber.cpp  PawnPositionSubscriber.h  PromotionSubscriber.cpp  PromotionSubscriber.h
src/view/: DraggablePiece.cpp  DraggablePiece.h  GameSettings.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PromotionDialog.cpp  PromotionDialog.h  PromotionDialog.ui
test/: LocalPrintTesting.h
